# School-Project

./: LICENSE  README.md
backend/: Cargo.toml  diesel.toml
backend/migrations/2025-01-08-141238_users/: down.sql  up.sql
backend/migrations/2025-02-10-163620_accounts/: down.sql  up.sql
backend/migrations/2025-03-13-060931_users/: up.sql
backend/migrations/2025-03-15-142318_accounts/: down.sql  up.sql
backend/migrations/2025-03-26-050438_vouchers/: down.sql  up.sql
backend/migrations/2025-03-27-034941_bank/: down.sql  up.sql
backend/migrations/2025-03-27-043217_inventory_management/: down.sql  up.sql
backend/migrations/2025-03-27-064810_orders_and_transfers/: down.sql  up.sql
backend/migrations/2025-03-27-093759_delivery/: down.sql  up.sql
backend/migrations/2025-04-02-190952_POS/: down.sql  up.sql
backend/migrations/2025-04-03-183306_ecommerce/: down.sql  up.sql
backend/src/: db.rs  main.rs  models.rs  ops.rs  schema.rs  services.rs
backend/src/ops/: accounts.rs  ecommerce.rs  encrypt.rs  inventory.rs  pos.rs  purchase.rs  user_data.rs  userdata_handler.rs
backend/src/ops/accounts/: bank.rs  coa_master.rs  exchange_rate.rs  financial_year.rs  journal.rs  ledger.rs  transaction_type.rs  voucher_codes.rs
backend/src/ops/ecommerce/: business_detail.rs  online_sales.rs  pages.rs
backend/src/ops/inventory/: delivery.rs  inventory_stock.rs  product.rs  warehouse.rs
backend/src/ops/pos/: receipt.rs  shop.rs
backend/src/ops/purchase/: order_detail.rs  orders.rs  transfer.rs
backend/src/ops/teams/: partner.rs
frontend/: package-lock.json  (+1 more)
(+86 files in other folders)
