[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#----Web Framework----
actix-web = "4.9.0"
actix-cors = "0.7.0"
#----JSON Data----
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
#----Database Framework----
diesel = {version = "2.2.6", features = ["postgres"]}
dotenvy = "0.15"