[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#----Web Framework----
actix-web = "4.9.0"
actix-cors = "0.7.0"
#----JSON Data----
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
#-----Data types------
chrono = { version = "0.4.39", features = ["serde"]}
bigdecimal = {version = "0.4.7", features = ["serde"]}
#----Database Framework----
diesel = {version = "2.2.6", features = ["postgres", "chrono", "numeric", "serde_json"]}
dotenvy = "0.15"

#----Debug----
env_logger = "0.11.6"
